# made-gan-api

./: Dockerfile  README.md  docker-compose.yaml  main.py  main_test.py  pyproject.toml  requirements.txt
app/: app.py  main.py
app/configs/: consts.py
app/image_generation/: image_generator.py  utils.py
app/worker/: celery_app.py  celery_worker.py
src/app/: main.py  utils.py
src/app/image_generation/: image_generator.py  utils.py
src/app/sql/: session.py
src/app/translation/: text_translator.py
src/app/worker/: celery_app.py  celery_worker.py
src/tg_bot/: Dockerfile  bot.py  requirements.txt  service_api.py  storage_utils.py
templates/: dynamic_result.html  generate_image.html  page.html  result.html  static_resilt.html  static_result.html
